# STKO_to_python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eval_review.html  mkdocs.yml  pyproject.toml  stko-to-python-SKILL.md  stko-to-python.skill
.github/workflows/: bench.yml  docs.yml  release.yml  test.yml
bench/: README.md  conftest.py  test_aggregation_bench.py  test_construction_bench.py  test_fetch_bench.py  test_pickle_bench.py
docs/: ElementResults.md  MPCODataSet.md  NodalResults.md  architecture-refactor-proposal.md  architecture.md  elements_guide.md  index.md  mpco_format_conventions.md  selector_and_mask_pipeline.md  viewer-refactor-directives.md
docs/api/: aggregation-engine.md  canonical-names.md  element-results.md  index.md  mpco-dataset.md  mpco-results.md  nodal-results.md  plotting.md  query-engines.md  section-cuts.md
docs/cookbook/: 01-base-shear-from-column-forces.md  02-stress-contour-on-a-wall.md  03-peak-moment-per-beam.md  04-volume-integral-on-bricks.md  05-selector-and-mask-pipeline.md  06-node-selector-and-mask-pipeline.md  07-select-by-geometry-and-property.md  08-rotate-beam-forces-to-global.md  09-render-beam-solids.md  10-section-cut-shells.md  11-section-cut-solids.md  12-section-cut-layered-shells.md  index.md
docs/examples/: elastic_frame.md  quad_frame_shell.md  section_cut_solid_and_layered.md  solid_mixed.md  usage_tour.md
docs/viewer/: 00-roadmap.md  01-architecture.md  02-porting-from-apegmsh.md  03-deployment-targets.md
examples/: elastic_frame_example.py  quad_frame_shell_example.py  section_cut_solid_and_layered_example.py  solid_mixed_example.py  usage_tour.py
src/STKO_to_python/: __init__.py
src/STKO_to_python.egg-info/: SOURCES.txt
src/STKO_to_python/MPCOList/: MPCOResults.py  MPCOdf.py  __init__.py
src/STKO_to_python/core/: __init__.py  dataclasses.py  dataset.py  metadata.py
src/STKO_to_python/cuts/: __init__.py  geometry.py  multi_cut.py  plane.py  section_cut.py  specs.py  sweep.py
src/STKO_to_python/dataprocess/: __init__.py  aggregation.py
src/STKO_to_python/elements/: __init__.py  canonical.py  element_manager.py  element_results.py  element_results_plotting.py  elements.py  selector.py
src/STKO_to_python/format/: __init__.py  gauss_points.py  shape_functions.py
src/STKO_to_python/io/: __init__.py  format_policy.py  hdf5_utils.py  info.py  meta_parser.py  partition_pool.py  time_series_reader.py
src/STKO_to_python/model/: __init__.py  cdata.py  cdata_format.py  cdata_reader.py  layered_section_reader.py  model_info.py  model_info_reader.py  transforms.py
src/STKO_to_python/nodes/: __init__.py  node_manager.py  nodes.py  result_mask.py  selector.py
src/STKO_to_python/plotting/: __init__.py  beam_solid.py  deformed_shape.py  mesh.py  plot.py  plot_dataclasses.py  plot_settings.py
src/STKO_to_python/query/: __init__.py  base_query_engine.py  element_query_engine.py  nodal_query_engine.py
src/STKO_to_python/results/: nodal_results_dataclass.py  nodal_results_info.py  nodal_results_plotting.py
src/STKO_to_python/selection/: __init__.py  resolver.py
src/STKO_to_python/utilities/: coords.py  gauss_points.py  h5_repair_tool.py  shape_functions.py
src/STKO_to_python/viewer/: __init__.py  _version.py
stko_results_examples/elasticFrame/: elasticFrame.scd  elasticFrame_QUADS.scd  elasticFrame_mesh.scd  elasticFrame_mesh_displacementsBase.scd
stko_results_examples/elasticFrame/QuadFrame_results/: RunSolver.bat  analysis_steps.tcl  elements.tcl  materials.tcl  nodes.tcl  results.part-0.mpco.cdata  results.part-1.mpco.cdata  sections.tcl
stko_results_examples/elasticFrame/elasticFrame_mesh_displacementBased_results/: elements.tcl  results.mpco  results.mpco.cdata  sections.tcl
stko_results_examples/elasticFrame/elasticFrame_mesh_results/: analysis_steps.tcl  elements.tcl  nodes.tcl  results.mpco  results.mpco.cdata
stko_results_examples/elasticFrame/results/: RunSolver.bat  analysis_steps.tcl  elements.tcl  nodes.tcl  results.mpco  results.mpco.cdata
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_aggregation_forwarders.py  test_beam_solids.py  test_deformed_shape.py  test_disp_force_beam_col.py  test_element_plotting.py  test_examples_end_to_end.py  test_examples_usage_tour.py  test_fixture_snapshots.py  test_gp_xi_and_at_ip.py  test_integrate_canonical.py  test_mesh_plot.py  test_meta_naming_end_to_end.py  test_multi_stage.py  test_nl_shell_fixture.py  test_physical_coords.py  test_plot_facade.py  test_time_series_helpers.py
tests/unit/: test_aggregation_engine_skeleton.py  test_beam_extrude.py  test_canonical_names.py  test_cdata_reader.py  test_coords.py  test_dataset_context_manager.py  test_element_bucket_grouping.py  test_gauss_points.py  test_logging.py  test_manager_aliases.py  test_model_metadata.py  test_mpco_results_df_accessor.py  test_nodes_flatten.py  test_plot_settings.py  test_public_api.py  test_shape_functions.py  test_transforms.py  test_tri_tet_primitives.py
tests/unit/cuts/: test_beam_kernel_geometry.py  test_beam_kernel_resultant.py  test_bounding_polygon.py  test_cut_plotter.py  test_geometry.py  test_multi_cut.py  test_per_layer_shell.py  test_plane.py  test_section_cut.py  test_section_force_interpolation.py  test_section_force_real_fixture.py  test_shell_kernel.py  test_solid_kernel.py  test_specs.py  test_sweep.py
tests/unit/elements/: test_selector.py
tests/unit/io/: test_dataset_pool_integration.py  test_format_policy.py  test_layered_meta.py  test_meta_parser.py  test_partition_pool.py  test_time_series_reader.py
tests/unit/nodes/: test_result_mask.py  test_selector.py
tests/unit/query/: test_base_query_engine.py  test_dataset_engine_integration.py  test_element_query_engine.py  test_nodal_query_engine.py
tests/unit/results/: test_nodal_results_info_selection.py  test_nodal_results_pickle.py
tests/unit/selection/: test_dataset_resolver_integration.py  test_selection_resolver.py
tests/viewer/: test_smoke.py
tests/viewer/core/: conftest.py  test_layer.py  test_mpco_adapter.py  test_protocols.py  test_scene.py  (+3 more)
(+46 files in other folders)
